OpenLDAP Change Log

Changes included in OpenLDAP Stable 
	CVS Tag: OPENLDAP_STABLE_981105
	Updated manual pages.
	Fixed libldif/line64 bug

Changes included in OpenLDAP Stable 
	CVS Tag: OPENLDAP_STABLE_981027
	Fixed slapd filter.c to error on stderr
	Fixed slapd/back-ldbm/group.c member bug

Changes included in OpenLDAP Stable 
	CVS Tag: OPENLDAP_STABLE_981025 
	Added make/gmake comments
	Changed ACL Group code to use groupOfNames
	Changed "X.500" -> "LDAP" in UD
	Fixed slapd partial results bug
	Fixed slapd Y2K/GMT bug
		-DLDAP_LOCALTIME added to provide old behavior
	Fixed slapd flush writes bug
	Removed lint

Changes included in OpenLDAP 1.0.2 
CVS Tag: OPENLDAP_STABLE_980929 
	Updated README, INSTALL files 
	Updated Linux platform defaults
	Updated FreeBSD 2 & 3 platform defaults
	Updated PORTS doc to clarify content
	Updated slapd/tools to use ldapconfig.h slapd.conf constant
	Added SCHED_YIELD_MISSING flag
	Added LDAP_ALLOW_NULL_SEARCH_BASE flag
	Added core removal to tests/Make-template
	Fixed slapd/acl debug trace problem
	Fixed ud/auth.c bound_dn problem 
	Fixed back-ldbm/idl.c CLDAP include <sys/socket.h> problem
	Fixed Makefile $(CC) problem
	Fixed LIBEXEC/SBIN creation problem
	Fixed gmake RUNDIR not defaulting problem 

Changes included in OpenLDAP 1.0.1 
CVS Tag: OPENLDAP_STABLE_980907 
	Added GNU Make Support 
	Added OpenBSD Support 
	Added FreeBSD 2.x vs 3.x detection 
	Fixed slapd LDAP_TCP_WRAPPER build problem 
	Fixed slapd NO_THREADS busy loop problem 
	Fixed slurpd NULL termination problem 
	Fixed misc build/install problems 
	Removed junked binary files from repository/distribution 

Changes included in OpenLDAP 1.0 
CVS Tag: OPENLDAP_1-0 
	Added TCP Wrapper support to slapd 
	Added POSIX Threads (final) support 
	Added ACL enhancements including 
		Access by Groups 
		POSIX regex support 
	platform updates, and 
	numerous bug fixes and build changes. 

Base Version: University of Michigan LDAP v3.3 
CVS Tag: UMICH_3_3 