@@ -10,16 +10,17 @@
 #include "slap.h"
 #include "ldapconfig.h"
 
-extern void	daemon();
+extern void	slapd_daemon();
 extern int	lber_debug;
 
 extern char Versionstr[];
+
 
 /*
  * read-only global variables or variables only written by the listener
  * thread (after they are initialized) - no need to protect them with a mutex.
  */
-int		ldap_debug;
+int		ldap_debug = 0;
 #ifdef LDAP_DEBUG
 int		ldap_syslog = LDAP_DEBUG_STATS;
 #else
@@ -55,15 +56,12 @@ pthread_mutex_t	num_sent_mutex;
  */
 pthread_mutex_t	entry2str_mutex;
 pthread_mutex_t	replog_mutex;
-#ifndef sunos5
-pthread_mutex_t	regex_mutex;
-#endif
 
 static
 usage( name )
     char	*name;
 {
-	fprintf( stderr, "usage: %s [-d debuglevel] [-f configfile] [-p portnumber] [-s sysloglevel]\n", name );
+	fprintf( stderr, "usage: %s [-d ?|debuglevel] [-f configfile] [-p portnumber] [-s sysloglevel]\n", name );
 }
 
 main( argc, argv )
@@ -105,19 +103,19 @@ main( argc, argv )
 				    LDAP_DEBUG_CONFIG );
 				printf( "\tLDAP_DEBUG_ACL\t\t%d\n",
 				    LDAP_DEBUG_ACL );
-				printf( "\tLDAP_DEBUG_STATS\t\t%d\n",
+				printf( "\tLDAP_DEBUG_STATS\t%d\n",
 				    LDAP_DEBUG_STATS );
-				printf( "\tLDAP_DEBUG_STATS2\t\t%d\n",
+				printf( "\tLDAP_DEBUG_STATS2\t%d\n",
 				    LDAP_DEBUG_STATS2 );
-				printf( "\tLDAP_DEBUG_SHELL\t\t%d\n",
+				printf( "\tLDAP_DEBUG_SHELL\t%d\n",
 				    LDAP_DEBUG_SHELL );
-				printf( "\tLDAP_DEBUG_PARSE\t\t%d\n",
+				printf( "\tLDAP_DEBUG_PARSE\t%d\n",
 				    LDAP_DEBUG_PARSE );
 				printf( "\tLDAP_DEBUG_ANY\t\t%d\n",
 				    LDAP_DEBUG_ANY );
 				exit( 0 );
 			} else {
-				ldap_debug = atoi( optarg );
+				ldap_debug |= atoi( optarg );
 				lber_debug = (ldap_debug & LDAP_DEBUG_BER);
 			}
 			break;
@@ -184,12 +182,27 @@ main( argc, argv )
 		pthread_attr_init( &attr );
 		pthread_attr_setdetachstate( &attr, PTHREAD_CREATE_DETACHED );
 
-		if ( pthread_create( &listener_tid, attr, (void *) daemon,
+#if !defined( THREAD_MIT_PTHREADS ) && !defined( THREAD_DCE_PTHREADS )
+		/* POSIX_THREADS or compatible
+		 * This is a draft 10 or standard pthreads implementation
+		 */
+		if ( pthread_create( &listener_tid, &attr, (void *) slapd_daemon,
 		    (void *) port ) != 0 ) {
 			Debug( LDAP_DEBUG_ANY,
 			    "listener pthread_create failed\n", 0, 0, 0 );
 			exit( 1 );
 		}
+#else	/* draft 4 */
+		/*
+		 * This is a draft 4 or earlier pthreads implementation
+		 */
+		if ( pthread_create( &listener_tid, attr, (void *) slapd_daemon,
+		    (void *) port ) != 0 ) {
+			Debug( LDAP_DEBUG_ANY,
+			    "listener pthread_create failed\n", 0, 0, 0 );
+			exit( 1 );
+		}
+#endif	/* draft 4 */
 		pthread_attr_destroy( &attr );
 		pthread_join( listener_tid, (void *) &status );
 		pthread_exit( 0 );
