@@ -1,9 +1,15 @@
 OpenLDAP Change Log
 
 Changes included in OpenLDAP Stable 
+	CVS Tag: OPENLDAP_STABLE
+	Fixed DCE Threading issues
+
+Changes included in OpenLDAP Stable 
 	CVS Tag: OPENLDAP_STABLE_981105
 	Updated manual pages.
 	Fixed libldif/line64 bug
+	Fixed slapd/back-passwd sizelimit bug
+	Fixed slapd/filterentry equality bug
 
 Changes included in OpenLDAP Stable 
 	CVS Tag: OPENLDAP_STABLE_981027
